commons/envoy-no-filters/envoy.yaml
static_resources:
  listeners:
    - name: service
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8002
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/envoy/certs/envoy-service.crt"
                    private_key:
                      filename: "/etc/envoy/certs/envoy-service.key"
                validation_context:
                  trusted_ca:
                    filename: "/etc/envoy/certs/ca.crt"

  clusters:
    - name: service
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service.zt.local
                      port_value: 8888
